--- a/latex/class_b_heap.tex
+++ b/latex/class_b_heap.tex
@@ -159,7 +159,7 @@ Testing function that prints the keys in any list, children or root list.
 
 
 \begin{DoxyParams}{Parameters}
-{\em node} & \\
+{\em node} & Node to start printing from \\
 \hline
 \end{DoxyParams}
 
